Replace Guava collections with Java 9 equivalents