@@ -20,13 +20,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.nio.file.FileSystems;
 import java.nio.file.PathMatcher;
+import java.util.List;
 import java.util.Map;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedMap;
 import com.google.common.collect.Maps;
-import com.google.inject.Module;
 
 import org.jclouds.ContextBuilder;
 import org.jclouds.blobstore.BlobStore;
@@ -44,12 +43,12 @@ public final class GlobBlobStoreLocatorTest {
         blobStoreOne = ContextBuilder
                 .newBuilder("transient")
                 .credentials("identity", "credential")
-                .modules(ImmutableList.<Module>of(new SLF4JLoggingModule()))
+                .modules(List.of(new SLF4JLoggingModule()))
                 .build(BlobStoreContext.class).getBlobStore();
         blobStoreTwo = ContextBuilder
                 .newBuilder("transient")
                 .credentials("identity", "credential")
-                .modules(ImmutableList.<Module>of(new SLF4JLoggingModule()))
+                .modules(List.of(new SLF4JLoggingModule()))
                 .build(BlobStoreContext.class).getBlobStore();
 
     }
@@ -60,7 +59,7 @@ public final class GlobBlobStoreLocatorTest {
                 "id1", Map.entry("one", blobStoreOne),
                 "id2", Map.entry("two", blobStoreTwo));
         GlobBlobStoreLocator locator = new GlobBlobStoreLocator(
-                credsMap, ImmutableMap.of());
+                credsMap, Map.of());
         assertThat(locator.locateBlobStore("id2", null, null).getKey())
                 .isEqualTo("two");
         assertThat(locator.locateBlobStore(null, null, null).getKey())
@@ -70,10 +69,11 @@ public final class GlobBlobStoreLocatorTest {
 
     @Test
     public void testLocateContainer() {
+        // Must support null keys
         var credsMap = ImmutableMap.of(
                 "id1", Map.entry("one", blobStoreOne),
                 "id2", Map.entry("two", blobStoreTwo));
-        var globMap = ImmutableMap.of(
+        var globMap = Map.of(
                 FileSystems.getDefault().getPathMatcher("glob:container1"),
                 Map.entry("id1", blobStoreOne),
                 FileSystems.getDefault().getPathMatcher("glob:container2"),
@@ -103,7 +103,7 @@ public final class GlobBlobStoreLocatorTest {
                     "id1", Map.entry("one", blobStoreOne),
                     "id2", Map.entry("two", blobStoreTwo));
         var globMap =
-                ImmutableMap.<PathMatcher, Map.Entry<String, BlobStore>>of(
+                Map.<PathMatcher, Map.Entry<String, BlobStore>>of(
                         FileSystems.getDefault().getPathMatcher(
                                 "glob:{one,two}"),
                         Map.entry("id1", blobStoreOne),
@@ -122,6 +122,7 @@ public final class GlobBlobStoreLocatorTest {
 
     @Test
     public void testGlobLocatorAnonymous() {
+        // Must support null keys
         var globMap =
                 ImmutableMap.<PathMatcher, Map.Entry<String, BlobStore>>of(
                         FileSystems.getDefault().getPathMatcher("glob:one"),
